--- a/viewer - v2.html
+++ b/viewer - v2.html
@@ -1,194 +1,219 @@
 <html>
-
-<body>
+  <body>
     <script>
-        // hey streamer! all of the config stuff is here
-        const CLIENT_ID = "xxxxxxxx"
-        const CLIENT_SECRET = "xxxxxxxxx"
-        const BROADCASTER_NAME = "streamername"
+      // hey streamer! all of the config stuff is here
+      const CLIENT_ID = "xxx";
+      const CLIENT_SECRET = "xxx";
+      const BROADCASTER_NAME = "streamername";
 
-        const TOP_OR_RANDOM = "top"
-        const VOLUME_PERCENT = 50
-        const SHOW_CLIP_CREATORS = "true"
-        // TOP_OR_RANDOM can be either "top" to prioritise top clips or "random" to get random clips out of your top 1000
-        // note that "random" clip mode requires a tiny bit of buffer time when the page is first loaded to collect a list of clips
+      const TOP_OR_RANDOM = "random";
+      const VOLUME_PERCENT = 50;
+      const SHOW_CLIP_CREATORS = "false";
 
-        // below is just all the code that makes this work. once you've configured the settings above, you're good to go!
-        // -ShaderWave
+      const EXCLUDED_CLIPS = ["HandsomeSolidBisonDerp-fn_0IfbDEVjydH9X"]; // add any clips you don't want to play here
 
+      // TOP_OR_RANDOM can be either "top" to prioritise top clips or "random" to get random clips out of your top 1000
+      // note that "random" clip mode requires a tiny bit of buffer time when the page is first loaded to collect a list of clips
 
+      // below is just all the code that makes this work. once you've configured the settings above, you're good to go!
+      // -ShaderWave
 
+      // Utility functions
+      async function authenticatedFetch(url, options) {
+        options = options || {};
+        options.headers = options.headers || {};
 
+        options.headers["Client-ID"] = CLIENT_ID;
+        options.headers["Authorization"] = `Bearer ${
+          (await getTwitchCredentials()).access_token
+        }`;
 
+        return await fetch(url, options);
+      }
 
+      let OAUTH = null;
+      async function getTwitchCredentials() {
+        if (OAUTH) return OAUTH;
 
+        const response = await fetch(
+          `https://id.twitch.tv/oauth2/token?client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&grant_type=client_credentials`,
+          {
+            method: "POST",
+          }
+        );
+        OAUTH = await response.json();
+        return OAUTH;
+      }
 
-        // Utility functions
-        async function authenticatedFetch(url, options) {
-            options = options || {};
-            options.headers = options.headers || {}
+      let BROADCASTER_ID = null;
+      async function getBroadcasterId() {
+        if (BROADCASTER_ID) return BROADCASTER_ID;
 
-            options.headers["Client-ID"] = CLIENT_ID
-            options.headers["Authorization"] = `Bearer ${(await getTwitchCredentials()).access_token}`
+        const response = await authenticatedFetch(
+          `https://api.twitch.tv/helix/users?login=${BROADCASTER_NAME}`
+        );
+        BROADCASTER_ID = (await response.json()).data[0].id;
+        return BROADCASTER_ID;
+      }
 
-            return await fetch(url, options);
+      function delay(ms) {
+        return new Promise((resolve) => setTimeout(resolve, ms));
+      }
+
+      let CLIPS_PAGINATION = null;
+      async function getTopClips(amount = 100) {
+        let response = await authenticatedFetch(
+          `https://api.twitch.tv/helix/clips?first=${amount}&broadcaster_id=${await getBroadcasterId()}${
+            CLIPS_PAGINATION ? `&after=${CLIPS_PAGINATION}` : ""
+          }`
+        );
+        if (response.status !== 200) {
+          await delay(1000);
+          return await getTopClips();
+        }
+        let body = await response.json();
+
+        CLIPS_PAGINATION = body.pagination.cursor;
+        return body;
+      }
+
+      async function getRandomClips() {
+        return await getTopClips();
+      }
+
+      function getClipStreamURL(clip) {
+        let thumbPart = clip.thumbnail_url.split("-preview-");
+        return thumbPart[0] + ".mp4";
+      }
+
+      let CLIPS_TO_PLAY = [];
+      let CLIP_PLAYING = null;
+
+      function setupPlayer() {
+        const player = document.getElementById("player");
+
+        player.load();
+        player.loop = false;
+        player.controls = false;
+        player.volume = VOLUME_PERCENT / 100;
+
+        player.addEventListener("ended", playRandom);
+      }
+
+      let FETCH_COUNT = 0;
+      async function playRandom() {
+        const player = document.getElementById("player");
+        const overlayText = document.getElementById("overlay");
+
+        if (CLIP_PLAYING) {
+          CLIPS_TO_PLAY.splice(CLIPS_TO_PLAY.indexOf(CLIP_PLAYING), 1);
         }
 
-        let OAUTH = null;
-        async function getTwitchCredentials() {
-            if (OAUTH) return OAUTH;
-
-            const response = await fetch(`https://id.twitch.tv/oauth2/token?client_id=${CLIENT_ID}&client_secret=${CLIENT_SECRET}&grant_type=client_credentials`, {
-                method: "POST"
-            })
-            OAUTH = await response.json();
-            return OAUTH;
+        if (
+          CLIPS_TO_PLAY.length !== 0 &&
+          FETCH_COUNT <= 10 &&
+          TOP_OR_RANDOM === "random"
+        ) {
+          CLIPS_TO_PLAY = CLIPS_TO_PLAY.concat((await getTopClips()).data);
+          FETCH_COUNT += 1;
         }
 
-        let BROADCASTER_ID = null;
-        async function getBroadcasterId() {
-            if (BROADCASTER_ID) return BROADCASTER_ID;
-
-            const response = await authenticatedFetch(`https://api.twitch.tv/helix/users?login=${BROADCASTER_NAME}`)
-            BROADCASTER_ID = (await response.json()).data[0].id;
-            return BROADCASTER_ID;
+        if (CLIPS_TO_PLAY.length === 0) {
+          const status = document.getElementById("status");
+          status.className = "statusText";
+          CLIPS_TO_PLAY = (await getTopClips()).data;
+          FETCH_COUNT = 0;
+          status.className = "statusText hide";
         }
 
-        let CLIPS_PAGINATION = null
-        async function getTopClips() {
-            let response = await authenticatedFetch(`https://api.twitch.tv/helix/clips?first=100&broadcaster_id=${await getBroadcasterId()}${CLIPS_PAGINATION ? `&after=${CLIPS_PAGINATION}` : ""}`);
-            let body = await response.json();
+        let random = Math.floor(
+          Math.random() * Object.keys(CLIPS_TO_PLAY).length
+        );
+        const clip = CLIPS_TO_PLAY[Object.keys(CLIPS_TO_PLAY)[random]];
 
-            CLIPS_PAGINATION = body.pagination.cursor;
-            return body;
+        CLIP_PLAYING = clip;
+
+        if (EXCLUDED_CLIPS.includes(clip.id)) {
+          console.log("Skipping excluded clip: " + clip.id);
+          playRandom();
+          return;
         }
 
-        async function getRandomClips() {
-            let clips = []
-
-            const max = 10
-            let pagination = null;
-            for (let i = 0; i < max; i++) { // top 1000 clips
-                let response = await authenticatedFetch(`https://api.twitch.tv/helix/clips?first=100&broadcaster_id=${await getBroadcasterId()}${pagination ? `&after=${pagination}` : ""}`);
-                let body = await response.json()
-
-                pagination = body.pagination.cursor;
-                clips = clips.concat(body.data)
-
-                const status = document.getElementById("status")
-                status.innerText = "Loading Clips: " + Math.floor(((i + 1) / max) * 100) + "%"
-            }
-
-            return clips;
+        player.pause();
+        player.src = getClipStreamURL(clip);
+        player.play();
+        if (SHOW_CLIP_CREATORS.toLowerCase() == "true") {
+          let date = new Date(clip.created_at);
+          let day = ("0" + date.getDate()).slice(-2);
+          let month = ("0" + (date.getMonth() + 1)).slice(-2);
+          let year = date.getFullYear();
+          overlayText.innerText = `Clipped on ${year}-${month}-${day} by ${clip.creator_name}`;
         }
+      }
 
-        function getClipStreamURL(clip) {
-            let thumbPart = clip.thumbnail_url.split("-preview-");
-            return thumbPart[0] + ".mp4";
-        }
+      function run() {
+        setupPlayer();
+        playRandom();
+      }
 
-        let CLIPS_TO_PLAY = []
-        let CLIP_PLAYING = null
-
-        function setupPlayer() {
-            const player = document.getElementById("player")
-
-            player.load()
-            player.loop = false;
-            player.controls = false;
-            player.volume = VOLUME_PERCENT / 100
-
-            player.addEventListener("ended", playRandom)
-        }
-
-        async function playRandom() {
-            const player = document.getElementById("player")
-            const overlayText = document.getElementById("overlay")
-
-            if (CLIP_PLAYING) {
-                CLIPS_TO_PLAY.splice(CLIPS_TO_PLAY.indexOf(CLIP_PLAYING), 1)
-            }
-
-            if (CLIPS_TO_PLAY.length == 0) {
-                const status = document.getElementById("status")
-
-                status.className = "statusText"
-                CLIPS_TO_PLAY = TOP_OR_RANDOM == "top" ? (await getTopClips()).data : await getRandomClips()
-                status.className = "statusText hide"
-            }
-
-            let random = Math.floor(Math.random() * Object.keys(CLIPS_TO_PLAY).length)
-            const clip = CLIPS_TO_PLAY[Object.keys(CLIPS_TO_PLAY)[random]]
-
-            CLIP_PLAYING = clip
-
-            player.pause()
-            player.src = getClipStreamURL(clip)
-            player.play()
-            if (SHOW_CLIP_CREATORS.toLowerCase() == "true") {
-                
-                let name = (clip.title)
-                let date = new Date(clip.created_at)
-                let day = ('0' + date.getDate()).slice(-2);
-                let month = ('0' + (date.getMonth()+1)).slice(-2);
-                let year = date.getFullYear();
-                overlayText.innerText = ` ${name} \n Clipped on ${year}-${month}-${day} by ${clip.creator_name}  `
-            }
-        }
-
-
-        function run() {
-            setupPlayer()
-            playRandom()
-        }
-
-        window.addEventListener("load", run);
+      window.addEventListener("load", run);
     </script>
     <div class="container">
-        <video id="player" style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1;"></video>
-        <div id="overlay" class="overlayText"></div>
-        <h1 id="status" class="statusText">Loading Clips</h1>
+      <video
+        id="player"
+        style="
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: -1;
+        "
+      ></video>
+      <div id="overlay" class="overlayText"></div>
+      <h1 id="status" class="statusText">Loading Clips</h1>
     </div>
-</body>
+  </body>
 
-<head>
+  <head>
     <style>
-        .statusText {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+      .statusText {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
-            color: white;
-            background-color: rgb(225, 154, 243);
-            padding: 4px 8px 4px 8px;
-            border-radius: 4px;
-        }
+        color: white;
+        background-color: rgb(225, 154, 243);
+        padding: 4px 8px 4px 8px;
+        border-radius: 4px;
+      }
 
-        .statusText.hide {
-            display: none;
-        }
+      .statusText.hide {
+        display: none;
+      }
 
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-        }
+      .container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
 
-        .overlayText {
-            position: absolute;
-            /*These calcs are used to track the bottom corner of the video as it holds its aspect ratio while the window is resized*/
-            top: calc((100vh - min(100vh/9, 100vw/16)*9)/2 + min(100vh/9, 100vw/16)*9 - 160px);
-            left: calc((100vw - min(100vh/9, 100vw/16)*16)/2 + 1.2vw);
-            color: rgb(250, 252, 252);
-            background-color: rgb(153, 103, 158);
-            padding: 4px 8px 4px 8px;
-            border-radius: 4px;
-            font-size: 60px;
-            font-weight: bold;
-            
-        }
+      .overlayText {
+        position: absolute;
+        /*These calcs are used to track the bottom corner of the video as it holds its aspect ratio while the window is resized*/
+        top: calc(
+          (100vh - min(100vh/9, 100vw/16) * 9) / 2 + min(100vh/9, 100vw/16) * 9 -
+            160px
+        );
+        left: calc((100vw - min(100vh/9, 100vw/16) * 16) / 2 + 1.2vw);
+        color: rgb(250, 252, 252);
+        background-color: rgb(153, 103, 158);
+        padding: 4px 8px 4px 8px;
+        border-radius: 4px;
+        font-size: 60px;
+        font-weight: bold;
+      }
     </style>
-</head>
-
+  </head>
 </html>
